// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    2
     
    expenses
     totatling 
    $120.30
  </p>
</div>
`;

exports[`should render ExpenseSummary with single expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totatling 
    $1.20
  </p>
</div>
`;
